Added jpackage app-image build target for all platforms